@@ -16,6 +16,7 @@ Bugs fixed
 * #2211: Fix paragraphs in table cell doesn't work in Latex output
 * #2253: ``:pyobject:`` option of ``literalinclude`` directive can't detect indented
   body block when the block starts with blank or comment lines.
+* Fix TOC is not shown when no ``:maxdepth:`` for toctrees (ref: #771)
 
 Release 1.3.4 (released Jan 12, 2016)
 =====================================
